--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -24,10 +24,12 @@
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
+
 </head>
 <body>
   <section class="menu cid-rDq2pWFCKM" once="menu" id="menu1-7f">
@@ -82,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -106,7 +108,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="UECvUI256hdzJlcuIsgc3eTPiglrRJLVRmsHVmi3TfhZXHCYxe3nIXZXQpKGyGD9xEvC77qmBW0mr36bl08xr8TpdVax+S6eytbhgH6BjMrv1OruD3s+MqnCz6Qb8s5S">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="7zhXLZhppaFXpe1glHC1nBC/tRhBKBFXdr5hN83LkW+AeSaS0U8wMFK2IURes/KjKtxAV27f1bRBcsnONUsBXcKwF3xD0xKO48ouerT6TlkHN1wTC0YKxtR6QERNiWlS.Kgl7wwym4Z9yv48ITwVWjpvTUz7qYfBDuHiiwy/NFQRUUZclAZ+HOJ4BtV88t+9DOTWSYwqnBTtuyG+igjevNKC5mnJQSInzSwsnWVU/7SPBY3qUwZpxvXfcP5xQP2mY">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -304,5 +306,6 @@
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  </body>
+  
+</body>
 </html>
