--- a/CV01.html
+++ b/CV01.html
@@ -23,10 +23,12 @@
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
+
 </head>
 <body>
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-6f">
@@ -81,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
 
     
 
@@ -105,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ooSeVvdmHe6y++2UgCy3XuyGMWQ4UlU9hQ28K2p0sXn1k6I9VSwLCZy594MWTGlJL5gZVDC6+1ZbPp4A98NLeHpdpErkFgnxm9gD038RoNjql1fT8LHPv5ye42K0u0EA">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="7RZgveA8/uqCfIVrXo2weEqBCht9hSNFV0LTGhnt2JBgMXcomJVnDf7E6cWtUrYLW1HZ/XtzyQV19xrYb3zu4L1nJoz5CTkHqzkvmh2S2VzwgW7/SQJGq/+oJawuK0gI.XxowE8ktX68v8XkfxKj8PvefB1uLOtV8oNOGY0mTu/vxUBWBeIrlTwJY/QeBXFpec10d6uUlk9jkPmzFrLqDGhu4g2U0gn6ZbHyt7mvq+AewLHcCVACAS6eplkOUAf9U">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -229,5 +231,6 @@
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  </body>
+  
+</body>
 </html>
