--- a/Indicators.html
+++ b/Indicators.html
@@ -14,16 +14,18 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/as-pie-progress/css/progress.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
+
 </head>
 <body>
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-5e">
@@ -78,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
+<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
 
     
 
@@ -201,7 +203,7 @@
                 <h2 class="mbr-section-title pb-3 align-left mbr-fonts-style display-2">Labour Market Indicators</h2>
                 <h3 class="mbr-section-subtitle pb-5 align-left mbr-fonts-style display-5">Labour Market Indicators</h3>
                 <div class="mbr-figure">
-                    <img src="assets/images/background64.jpg">
+                    <img src="assets/images/background614.jpg">
                 </div>
             </div>
             <div class="cards-block">
@@ -816,19 +818,21 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>
   <script src="assets/sociallikes/social-likes.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  </body>
+  
+</body>
 </html>
