--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -23,10 +23,12 @@
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
+
 </head>
 <body>
   <section class="menu cid-rCGl02FmYT" once="menu" id="menu1-6m">
@@ -81,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -105,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="SylxtDVB0E3k83RFeXQV2zVljVbB8LUtBmsDX0LWFuaBVsVILrC7Rwj99kjSEYxlzEu7TD4hU3GbfmMYRBqmU7GNlfwzEQYrCf89aB+8C0zvtv5bqBdzkyKKYREqt1yF">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="jK1Vn6zQLYBWwTPhCxJdvKlas4u+c4KV9rQEFl4ZaP0nDRyr0krT4ldyB6fLAGW+ige3HX2SmpJRTuSOMpq+r8Lxj3QXucjZq7+ab+WTF46WSPf7+dgq5l1te8P0REeD.jF/SCGW++FfuPDfWKuXmM0MCkP2UGOswFQS+BGShJ7UdmVV5h80dXxUKo3+6KneMVxEr2vLreziR1af01sagYHRsHlmwBn2425iR+kPz40U0CrV5701Keu4AIg2Wlc9V">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -229,5 +231,6 @@
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  </body>
+  
+</body>
 </html>
