--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -23,10 +23,12 @@
   <link rel="stylesheet" href="assets/datatables/data-tables.bootstrap4.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/formoid-css/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
+
 </head>
 <body>
   <section class="menu cid-rDq1AEdohN" once="menu" id="menu1-7a">
@@ -81,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -105,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Q2jXIxg+A7/CCYqQufrJG3FTw5Dx5HO8Yt0zSEHW4hjEkcUfQKwxzLJ6CxeFMbHiYyHZwxMpqGhoOKtCisf7GauhUmKoIS/4O9OvWOhpXT5fE5th01tGtsi7DvDzKDgo">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="T0uO1Xdfr0Gq5qtr6RFOYQ6PzdY2alrsHzHpn2cQAZArCQpRWi8CfW6SJse7f/UBf1C0UXTJYxSjDvnkyxuNp4fdu5dXeW/+hpx5T04dncdOQvHMH4fnApMmzXDhIpgl.CmyagmpbU2q3uy5n0HhmWWArBERVT/LPwRmXlhg3bXPhI04RgHAb8+bFd1G0wIWtI+hfm0Giju/6lpJ9LIUaI7DrsLR4zh9O3I1d7ZaX0Joxerk9fpNKnjY5GtTaNSWP">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -304,5 +306,6 @@
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  </body>
+  
+</body>
 </html>
