--- a/Social.html
+++ b/Social.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-s">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-s">
 
     
 
@@ -276,7 +276,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LlKgPyKRYbmiJ0zpqHVC5t2/qjqFbsyNoTV6zRRbvFek7YyBUqFtcMnnlVszFOFSZtdNNrwzhtWLXhFynJvd8YG3cirp6Roap+bAmwH1fwCuhjoB4whfXK3ksfN+F5SQ.FlUqcrqLKNWWrBZhuU7IRHYLQuHjFqvpDMQ6xiDcHV/q8K86yYbVY7Gchw5k5p2h8gZ1VfOEG+Wg88CaXbWF9gsp7lJ8a2jPIg6fyD0TOETJ4ftAT30T5DB5UZDOSY9d">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BkSV9p2HCEZlJEjDhSrekT9yxfBnPiZFeftv2HaCVBh8ehugi0kM9jDSqmzZrr56ogJy5Bg7p+4r5TqCrZeK66fl8+i4TjL/SbDv92S9zGYpwyKUCON6WItUjDjOG6Z/.mCeagkA64RJy9EVMgIxQIEqcKbCAmDcK3FTEA2vAVxOovwpfffr5HO+119cMWIGM+NTiootipTIxNlKs8nzxB4yV4ZaVcenUp+OPXgrgDbLJZkK9lmuIX65i/uL/VgFS">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
