--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="T0uO1Xdfr0Gq5qtr6RFOYQ6PzdY2alrsHzHpn2cQAZArCQpRWi8CfW6SJse7f/UBf1C0UXTJYxSjDvnkyxuNp4fdu5dXeW/+hpx5T04dncdOQvHMH4fnApMmzXDhIpgl.CmyagmpbU2q3uy5n0HhmWWArBERVT/LPwRmXlhg3bXPhI04RgHAb8+bFd1G0wIWtI+hfm0Giju/6lpJ9LIUaI7DrsLR4zh9O3I1d7ZaX0Joxerk9fpNKnjY5GtTaNSWP">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="kkG1I1e2gLnuBf/bqT5aVt/KnnAT5TyW8HYstrwENELl0tYeyX6rku8guAABczAl2PoKM921HDpeTGGWqC0W40ljrfsA1pqU+jKAZ0p17pzxVmzcTW4x7sXO7qSDoi6Y.LJCUKfsjRHnnrLffMm+LgTTIYCFffla2aG+6v+HTs5nQphmQocB7C04zqHISV0xDt9sPVPEArYAIbwUs97IcpW6RSeCpjCbOmi2sKs9iQaEVqcOxJ0gkoga7rSX53HiO">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
